syntax = "proto3";

package orders;

import "base.proto";

service OrdersService {
  rpc CreateOrder (CreateOrderDto) returns (Order) {}
  rpc FindAllOrders (base.Empty) returns (Orders) {}
  rpc FindOneOrder (FindOneOrderDto) returns (Order) {}
  rpc FindOneOrderByUserId (FindOneOrderByUserIdDto) returns (Order) {}
}

message FindOneOrderDto {
  string id = 1;
}

message FindOneOrderByUserIdDto {
  string userId = 1;
}

message Orders {
  repeated Order orders = 1;
}

message CreateOrderDto {
  string name = 1;
  string origin = 2;
  string userId = 3;
}

message Order {
  string id = 1;
  string name = 2;
  string origin = 3;
  string userId = 4;
}