syntax = "proto3";

import "base.proto";

package users;

service UsersService {
  rpc CreateUser (CreateUserDto) returns (User) {}
  rpc FindAllUsers (base.Empty) returns (Users) {}
  rpc FindOneUser (FindOneUserDto) returns (User) {}
  rpc UpdateUser (UpdateUserDto) returns (User) {}
  rpc RemoveUser (FindOneUserDto) returns (User) {}
  rpc QueryUsers (stream base.PaginationDto) returns (stream Users) {}
}

message UpdateUserDto {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

message FindOneUserDto {
  string id = 1;
}

message Users {
  repeated User users = 1;
}

message CreateUserDto {
  string name = 1;
  int32 age = 2;
}

message User {
  string id = 1;
  string name = 2;
  int32 age = 4;
}